--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,41 +4,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Spotify</title>
   </head>
-  <body>
-    Premium Discover Help Download
 
-    Music for everyone.
-    Spotify is now free on mobile, tablet and computer.
-    Listen to the right music, wherever you are.
+  <div id = "container"><body>
 
-    What’s on Spotify?
+  <header>
+    <img  src="images/spotify-logo.png" alt="Spotify-logo">
+    <ul>
+      <li>
+        <a href = "#">Premium</a>
+      </li> 
+      <li>
+        <a href = "#">Discover</a>
+      </li> <li>
+        <a href = "#">Help</a>
+      </li> 
+      <li>
+        <a href = "#">Download</a>
+      </li>
+    </ul>
+  </header>
+  
+  <main>
+    <div id = "section1">
+    <h1>Music for everyone.</h1>
+  <p>Spotify is now free on mobile, tablet and computer.
+  Listen to the right music, wherever you are.</p>
+</div>
+<h2 id = "whatson">What’s on Spotify?</h2>
+<div id = "section2">
 
-    Millions of Songs
+  <div id = "box1">
+    <img class = "imgbox" id = "imgbox1" src="images/music-icon.png" alt="musicIcon">
+    <h4>Millions of Songs</h4> 
     There are millions of
     songs on Spotify
+  </div>
+  <div id = "box2">
+    <img class = "imgbox" id = "imgbox2" src="images/high-quality-icon.png" alt="highQuality">
+    <h4>HD Music</h4>
+  Listen to music as if you
+  were listening live
+  </div>
+  <div id = "box3">
+    <img class = "imgbox" id = "imgbox3" src="images/devices-icon.png" alt="devicesIcon">
+    <h4>Stream Everywhere</h4>
+  Stream music on your
+  smartphone, tablet or
+  computer
+  </div>
 
-    HD Music
-    Listen to music as if you
-    were listening live
+</div>
 
-    Stream Everywhere
-    Stream music on your
-    smartphone, tablet or
-    computer
+</main>
+  
+  <footer>
+<div id = "footerContainer1">
+<div id = "footer1">
+<h4>It’s as yeezy as Kanye West.</h4>
+</div>
+<div id = "footer2">
+<h4>Search</h4>
+Know what you want to listen to?
+Just search and hit play.
+</div>
+<div id = "footer3">
+<h4>Browse</h4>
+Check out the latest charts,
+brand new releases and great
+playlists for right now.
+</div>
+<div id = "footer4">
+<h4>Discover</h4>
+Enjoy new music every Monday
+with your own personal playlist.
+Or sit back and enjoy Radio.
+</div></div>
 
-    It’s as yeezy as Kanye West.
-    Search
-    Know what you want to listen to?
-    Just search and hit play.
-    Browse
-    Check out the latest charts,
-    brand new releases and great
-    playlists for right now.
-    Discover
-    Enjoy new music every Monday
-    with your own personal playlist.
-    Or sit back and enjoy Radio.
-  </body>
-</html>
+    <div id = "footerContainer2">
+      <img id = "kaynePic" src="images/spotify-app.jpg" alt="kayneWest">
+    </div>
+  </footer>
+  
+  <!-- 
+  
+  It’s as yeezy as Kanye West.
+  Search
+  Know what you want to listen to?
+  Just search and hit play.
+  Browse
+  Check out the latest charts,
+  brand new releases and great
+  playlists for right now.
+  Discover
+  Enjoy new music every Monday
+  with your own personal playlist.
+  Or sit back and enjoy Radio. -->
+  </body></div>
